<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateUserActivity">

    <EditText
        android:id="@+id/editPasswordLogin"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editUsernameLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editUsernameLogin"
        app:layout_constraintTop_toBottomOf="@+id/editUsernameLogin" />

    <EditText
        android:id="@+id/editUsernameLogin"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogoLogin" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordLogin" />

    <Button
        android:id="@+id/bNewAccount"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_account"
        app:layout_constraintEnd_toEndOf="@+id/bLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bLogin"
        app:layout_constraintTop_toBottomOf="@+id/bLogin" />

    <ImageView
        android:id="@+id/appLogoLogin"
        android:layout_width="167dp"
        android:layout_height="180dp"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/applogo" />

</androidx.constraintlayout.widget.ConstraintLayout>