<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingBottom="56dp"
    tools:context=".ui.FavouriteRecipesFragment">

    <TextView
        android:id="@+id/favouriteRecipesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/recipes"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFavourites"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="68dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/noFavouriteRecipesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/recyclerViewFavourites"
        android:layout_alignBottom="@+id/recyclerViewFavourites"
        android:layout_alignParentStart="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="264dp"
        android:layout_marginBottom="266dp"
        android:text="@string/no_favourite_recipes"
        android:textSize="18sp"
        android:visibility="visible" />

    <SearchView
        android:id="@+id/searchViewFavouriteRecipes"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/favouriteRecipesLabel"
        android:queryHint="@string/action_search" />

</RelativeLayout>